add research images

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ nav-class: home
 <section class="cf">
 <div class="wrapper">
 <h2>About Me</h2>
-<div>I am a MS student in the DAVIAN Lab at KAIST advised by Jaegul Choo.
-    I received the Bachelor of Science in Biz&Tech Management and Industrial Engineering in 2020, at Korea Advanced Institute of Science and Technology.</div>
+<div>I am a M.S student in the DAVIAN Lab at KAIST AI advised by Jaegul Choo.
+    I received the Bachelor of Science in Biz.&Tech. Management and Industrial Engineering in 2020, at Korea Advanced Institute of Science and Technology.</div>
     I am particularly interested in applying ML/DL technologies in the real life services. 
-    In other words, areas where people and AI are in contact with each other and necessary for deploying AI models make me passionate. 
+    In other words, research areas necessary for deploying AI models and where people and AI are in contact with each other make me enthusiastic. 
     <!-- 나는 ai 기술을 활용해 우리 삶을 더 윤택하게 하는 서비스를 만드는데 관심이 많다. 즉 사람과 ai가 닿아있는 영역, ai 모델이 상용화 되는데 필요한 연구 등에 관심이 있음. -->
     I have conducted a study to consider the personal style on machine-translated output.
     Recently, I am interested in learning de-biased representation in natural language processing and computer vision fields.
@@ -63,7 +63,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
 <div style="overflow: auto">
     <div style="display: flex">
         <div style="flex: 20%">
-            <img src="theme-assets/profile.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
+            <img src="theme-assets/pepal.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
@@ -71,25 +71,25 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             <span class="font-weight-bold">Jihyeon Lee</span>, Taehee Kim, Yunwon Tae, Chunbok Park, Jaegul Choo<br>
             <i>(Under Review)</i><br>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
-            <a href="https://arxiv.org/abs/1910.02806" style="font-size: 0.8rem">[Paper]</a> 
-            <a href="https://github.com/clovaai/rebias" style="font-size: 0.8rem">[Code]</a> 
+            <a href="" style="font-size: 0.8rem">[Paper]</a> 
+            <a href="" style="font-size: 0.8rem">[Code]</a> 
             </p>
         </div>
     </div>
     <div style="display: flex">
         <div style="flex: 20%;">
-            <img src="theme-assets/profile.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
+            <img src="theme-assets/ssl_debias.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
             <span class="font-weight-bold">Exploring Self-supervised Learning for De-biased Representation</span><br>
             <span class="font-weight-bold">Jihyeon Lee</span>, Eungyup Kim, Jaegul Choo<br>
             <i>(Working Paper)</i><br>
-            <a href="https://arxiv.org/abs/1912.03085" style="font-size: 0.8rem">[Paper]</a>
+            <a href="" style="font-size: 0.8rem">[Paper]</a>
             </p>
         </div>
     </div>
-    <a class="read-more" href="/project/" title="Case studies">Project details →</a>
+    <!-- <a class="read-more" href="/project/" title="Case studies">Project details →</a> -->
 </div>
 </section>
 
