--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
 <div style="overflow: auto">
     <div style="display: flex">
         <div style="flex: 20%">
-            <img src="theme-assets/pepal.png" width="100px" height='100px' alt="" class="figure-img img-fluid" style="margin:10px;">
+            <img src="theme-assets/pepal.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
@@ -77,7 +77,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
     </div>
     <div style="display: flex">
         <div style="flex: 20%;">
-            <img src="theme-assets/ssl_debias.png" width="100px" height='100px' alt="" class="figure-img img-fluid" style="margin:10px;">
+            <img src="theme-assets/ssl_debias.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
