--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ nav-class: home
 <div class="wrapper">
 <h2>About Me</h2>
 <div>I am a M.S student in the DAVIAN Lab at KAIST AI advised by Jaegul Choo.
-    I received the Bachelor of Science in Biz.&Tech. Management and Industrial Engineering in 2020, at Korea Advanced Institute of Science and Technology.</div>
-<div>I am particularly interested in applying ML/DL technologies in the real life services. 
-    In other words, research areas necessary for deploying AI models and where people and AI are in contact with each other make me enthusiastic.</div>
+    I received the Bachelor of Science in Biz.&Tech. Management and Industrial Engineering in 2020, at Korea Advanced Institute of Science and Technology.
+<br><br>I am particularly interested in applying ML/DL technologies in the real life services. 
+    In other words, research areas necessary for deploying AI models and where people and AI are in contact with each other make me enthusiastic.
     <!-- 나는 ai 기술을 활용해 우리 삶을 더 윤택하게 하는 서비스를 만드는데 관심이 많다. 즉 사람과 ai가 닿아있는 영역, ai 모델이 상용화 되는데 필요한 연구 등에 관심이 있음. -->
-<div>I have conducted a study to consider the personal style on machine-translated output.
+<br><br>I have conducted a study to consider the personal style on machine-translated output.
     Recently, I am interested in learning de-biased representation in natural language processing and computer vision fields.
     More broadly, my research interests are in the areas of robustness, fairness, multimodal learning, and various natural language processing topics.</div>
 
@@ -38,8 +38,8 @@ nav-class: home
 {% endfor %} -->
 <a class="read-more" href="/CV_JIHYEONLEE.pdf" title="Case studies">Full resume →</a>
 <div>
-        Beside the research, I am in to,
-        <ul>
+        Beside the research, I am in to, <i>music, classical music, travel, health, book, coffee and love</i>.
+        <!-- <ul>
                 <li >Music</li>
                 <li >Classical music</li>
                 <li >Travel</li>
@@ -47,7 +47,7 @@ nav-class: home
                 <li >Book</li>
                 <li >Coffee</li>
                 <li >Love</li>
-          </ul>
+          </ul> -->
     
     </div>
 <h2 style='border-top: 0px; padding-top: 0rem;'>Publications </h2>
