update paper list

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
     </div>
     <div style="display: flex">
         <div style="flex: 20%;">
-            <img src="theme-assets/ssl_debias.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
+            <img src="theme-assets/debias.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
-            <span class="font-weight-bold">Exploring Self-supervised Learning for De-biased Representation</span><br>
+            <span class="font-weight-bold">Removing Dataset Bias with Bias-Tailored Swapping Augmentation</span><br>
             <span class="font-weight-bold">Jihyeon Lee</span>, Eungyup Kim, Jaegul Choo<br>
-            <i>(Working Paper)</i><br>
+            <i>(Under Review)</i><br>
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a> 
             </p>
