--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ nav-class: home
 ---
 <div class="wrapper">
 <h1>{{ site.title }}</h1>
-<p >AI researcher<br>jihyeonlee at kaist dot ac dot kr</p>
-<p><a href="https://scholar.google.com/citations?user=lArnR6gAAAAJ&hl=ko" target="_blank" rel="noopener noreferrer">Google Scholar</a><a href="https://github.com/GinaJihyeonLee" target="_blank" rel="noopener noreferrer">Github</a> <a href="https://www.linkedin.com/in/ginajihyeonlee" target="_blank" rel="noopener noreferrer">Linkedin</a>.</p>
+<p >Deep learning research scientist<br>KAIST / Kakaobrain<br>jihyeonlee at kaist dot ac dot kr</p>
+<p><a href="https://scholar.google.com/citations?user=lArnR6gAAAAJ&hl=ko" target="_blank" rel="noopener noreferrer"> [Google Scholar] </a><a href="https://github.com/GinaJihyeonLee" target="_blank" rel="noopener noreferrer"> [Github] </a> <a href="https://www.linkedin.com/in/ginajihyeonlee" target="_blank" rel="noopener noreferrer"> [Linkedin] </a>.</p>
 <div>
     <img src="./theme-assets/profile.png" width="180px"
             alt="profile image">
