--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ nav-class: home
 <section class="cf">
 <div class="wrapper">
 <h2>About Me</h2>
-<div>I am a MS student in the DAVIAN Lab at KAIST AI advised by Jaegul Choo.
+<div>I am a MS student in DAVIAN Lab at <a href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
     I received the Bachelor of Science in Biz&Tech Management and Industrial Engineering in 2020, at Korea Advanced Institute of Science and Technology.
 <br><br>My research interests lies in the areas of natural language processing and machine learning.
 Recently, I am interested in large-scale language models.
@@ -59,7 +59,7 @@ I am particularly interested in applying ML/DL technologies in the real life ser
                 <li >Love</li>
           </ul> -->
     
-<!-- </div> --> -->
+<!-- </div> -->
 <a class="read-more" href="/GinaLee_CV_2107_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a>
 
 <h2>Latest News</h2>
