--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ nav-class: home
 <section class="cf">
 <div class="wrapper">
 <h2>About Me</h2>
-<div>I am a MS student in DAVIAN Lab at <a style="text-decoration:underline; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
+<div>I am a MS student in DAVIAN Lab at <a style="text-decoration:underline; text-decoration-color:#df2854; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a style="text-decoration:underline; text-decoration-color:#df2854; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
     I received the Bachelor of Science in Biz&Tech Management and Industrial Engineering in 2020, at Korea Advanced Institute of Science and Technology.
 <br><br>My research interests lies in the areas of natural language processing and machine learning.
 Recently, I am interested in large-scale language models.
