--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@ nav-class: home
 <section class="cf">
 <div class="wrapper">
 <h2>About Me</h2>
-<div>I am a MS student in DAVIAN Lab at <a style="text-decoration:underline; text-decoration-color:#df2854; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a style="text-decoration:underline; text-decoration-color:#df2854; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
+<div>I am a MS student in DAVIAN Lab at <a style="text-decoration:underline; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a style="text-decoration:underline; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
     I received the Bachelor of Science in Biz&Tech Management and Industrial Engineering in 2020, at Korea Advanced Institute of Science and Technology.
-<br><br>My research interests lies in the areas of natural language processing and machine learning.
-Recently, I am interested in large-scale language models.
-I am particularly interested in applying ML/DL technologies in the real life services. 
+<br><br>
+<!-- My research interests lies in the areas of natural language processing and machine learning. -->
+<!-- Recently, I am interested in applying large-scale language models in the real life services. -->
+My current research interest is in improvement of large-scale language models.
+<!-- I am particularly interested in applying ML/DL technologies in the real life services.  -->
     <!-- In other words, research areas necessary for deploying AI models and where people and AI are in contact with each other make me enthusiastic. -->
     <!-- 나는 ai 기술을 활용해 우리 삶을 더 윤택하게 하는 서비스를 만드는데 관심이 많다. 즉 사람과 ai가 닿아있는 영역, ai 모델이 상용화 되는데 필요한 연구 등에 관심이 있음. -->
 <!--<br><br>I have conducted a study to consider the personal style on machine-translated output.-->
@@ -38,7 +40,7 @@ I am particularly interested in applying ML/DL technologies in the real life ser
 <!--    More broadly, my research interests are in the areas of <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">robustness, fairness, multimodal learning, and various natural language processing topics</code>.</div>-->
 <!-- <br><br>
     I have conducted a study to learn de-biased representation in natural language processing and computer vision fields. -->
-    At KAIST, I worked on projects ~~~ and ~~~.
+    At KAIST, I worked on projects that aim to learn de-biased representation and consider the personal style on machine-translated output.
     <!-- video-text multimodal learning (i.e.., effective temporal fusion of video and text dataset). -->
     More broadly, my research interests lies in the areas of <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">robustness, fairness, multimodal learning, memory-augmented LM, and various natural language processing topics</code>.</div>
 
@@ -60,9 +62,17 @@ I am particularly interested in applying ML/DL technologies in the real life ser
           </ul> -->
     
 <!-- </div> -->
+Detailed resume can be found in the following link.
 <a class="read-more" href="/GinaLee_CV_2107_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a>
 
 <h2>Latest News</h2>
+<div>
+        <ul>
+                <li >Oct 2022</li><br>
+                <li >Sep 2021</li>
+          </ul>
+    
+</div>
 
 
 <h2>Publications </h2>
@@ -119,7 +129,22 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             </p>
         </div>
     </div>
-    <!-- <a class="read-more" href="/project/" title="Case studies">Project details →</a> -->
+    <div style="display: flex">
+            <div style="flex: 20%">
+                <img src="theme-assets/pepal.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
+            </div>
+            <div style="flex: 80%; align-self: center">
+                <p class="lead">
+                <span class="font-weight-bold">PePAL: Personalized Post-Editing via Cluster-Aware Adversarial Learning</span><br>
+                <span class="font-weight-bold">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo<br>
+                <i>(Under Review)</i><br>
+                <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
+                <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a> 
+                <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a> 
+                </p>
+            </div>
+        </div>
+        <!-- <a class="read-more" href="/project/" title="Case studies">Project details →</a> -->
 </div>
 </section>
 
