--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ nav-class: home
 <div class="wrapper">
 <h2>About Me</h2>
 <div>I am a MS student in DAVIAN Lab at <a style="text-decoration:underline; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a style="text-decoration:underline; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
-    I received the Bachelor of Science in Biz&Tech Management and Industrial Engineering in 2020, at Korea Advanced Institute of Science and Technology.
+    I received the Bachelor of Science in Biz&Tech Management and Industrial Engineering in 2020, at KAIST.
 <br><br>
 <!-- My research interests lies in the areas of natural language processing and machine learning. -->
 <!-- Recently, I am interested in applying large-scale language models in the real life services. -->
@@ -40,7 +40,7 @@ My current research interest is in improvement of large-scale language models.
 <!--    More broadly, my research interests are in the areas of <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">robustness, fairness, multimodal learning, and various natural language processing topics</code>.</div>-->
 <!-- <br><br>
     I have conducted a study to learn de-biased representation in natural language processing and computer vision fields. -->
-    At KAIST, I worked on projects that aim to learn de-biased representation and consider the personal style on machine-translated output.
+    Formerly, I worked on projects that aim to learn de-biased representation, consider the personal style on machine-translation, and solve multi-modal QA.
     <!-- video-text multimodal learning (i.e.., effective temporal fusion of video and text dataset). -->
     More broadly, my research interests lies in the areas of <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">robustness, fairness, multimodal learning, memory-augmented LM, and various natural language processing topics</code>.</div>
 
@@ -67,10 +67,8 @@ Detailed resume can be found in the following link.
 
 <h2>Latest News</h2>
 <div>
-        <ul>
-                <li >Oct 2022</li><br>
-                <li >Sep 2021</li>
-          </ul>
+    <code style="padding: 2px 4px; font-size: 95%">Oct 2021</code>join kakaobrain!<br>
+    <code style="padding: 2px 4px; font-size: 95%">Sep 2021</code>accepted on AAAI 2021<br>
     
 </div>
 
