--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ Detailed resume can be found in the following link.
 
 <h2>Latest News</h2>
 <div>
-    <code style="padding: 2px 4px; font-size: 95%">Oct 2021</code>join kakaobrain!<br>
-    <code style="padding: 2px 4px; font-size: 95%">Sep 2021</code>accepted on AAAI 2021<br>
+    <code style="padding: 2px 4px; ">&emsp; Oct 2021</code>join kakaobrain!<br>
+    <code style="padding: 2px 4px; ">&emsp; Sep 2021</code>accepted on AAAI 2021<br>
     
 </div>
 
