--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ Detailed resume can be found in the following link.
 
 <h2>Latest News</h2>
 <div>
-    <code style="padding: 2px 4px; background-color: #f5f5f5">Oct 2021</code>&emsp; join kakaobrain!<br>
-    <code style="padding: 2px 4px; background-color: #f5f5f5">Sep 2021</code>&emsp; accepted on AAAI 2021<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021</code>&emsp; join kakaobrain!<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Sep 2021</code>&emsp; accepted on AAAI 2021<br>
     
 </div>
 
