--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@ Detailed resume can be found in the following link.
 <h2>Latest News</h2>
 <div>
     <!-- <code style="padding: 2px 4px; font-weight: bold;">Feb 2022</code>&emsp; Officially a Master in Artificial Intelligence<br> -->
-    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021</code>&emsp; Working at Kakaobrain as a AI Research Scientist<br>
-    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021</code>&emsp; Paper accepted to NeurIPS 2021 as Oral presentation<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; Working at Kakaobrain as a AI Research Scientist<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; Paper accepted to NeurIPS 2021 as Oral presentation<br>
     <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; Paper accepted to ICCV 2021<br>    
     <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; Starting my internship at Kakaobrin<br>
-    <code style="padding: 2px 4px; font-weight: bold;">Aug 2020</code>&emsp; Working at Naver Papago as a Collaborative Researcher<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; Working at Naver Papago as a Collaborative Researcher<br>
 </div>
 
 
