--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ Detailed resume can be found in the following link.
 <h2>Latest News</h2>
 <div>
     <!-- <code style="padding: 2px 4px; font-weight: bold;">Feb 2022</code>&emsp; Officially a Master in Artificial Intelligence<br> -->
-    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; Working at Kakaobrain as a AI Research Scientist<br>
-    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; Paper accepted to NeurIPS 2021 as Oral presentation<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; Working at Kakaobrain as an AI Research Scientist<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; Paper accepted to NeurIPS 2021 as an Oral presentation<br>
     <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; Paper accepted to ICCV 2021<br>    
     <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; Starting my internship at Kakaobrin<br>
     <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; Working at Naver Papago as a Collaborative Researcher<br>
@@ -96,7 +96,6 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             <span class="font-weight-bold">Jihyeon Lee*</span>, Eungyeup Kim*, Jaegul Choo<br>
             <i>ICCV 2021</i><br>
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
-            <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a>
             </p>
         </div>
     </div>
@@ -108,10 +107,11 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             <p class="lead">
             <span class="font-weight-bold">Learning Debiased Representation via Disentangled Feature Augmentation</span><br>
             Eungyeup Kim*, Jungsoo Lee*, Juyoung Lee, <span class="font-weight-bold">Jihyeon Lee</span>, Jaegul Choo<br>
-            <i>(Under Review)</i><br>
+            <i>NeurIPS 2021, Oral presentation</i><br>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a>
+            <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">Oral Presentation</code>
             </p>
         </div>
     </div>
@@ -125,8 +125,6 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             <span class="font-weight-bold">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo<br>
             <i>(Under Review)</i><br>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
-            <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a> 
-            <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a> 
             </p>
         </div>
     </div>
@@ -136,12 +134,10 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             </div>
             <div style="flex: 80%; align-self: center">
                 <p class="lead">
-                <span class="font-weight-bold">PePAL: Personalized Post-Editing via Cluster-Aware Adversarial Learning</span><br>
-                <span class="font-weight-bold">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo<br>
+                <span class="font-weight-bold">Dense but Efficient VideoQA for Intricate Compositional Reasoning</span><br>
+                <span class="font-weight-bold">Jihyeon Lee*</span>, Wooyoung Kang*, Eunsol Kim<br>
                 <i>(Under Review)</i><br>
                 <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
-                <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a> 
-                <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a> 
                 </p>
             </div>
         </div>
