--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a>
-            <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">Oral Presentation</code>
+            <span style="color: #df2854; background-color: #EFEBEF; border-radius: 4px;">Oral presentation</span>
             </p>
         </div>
     </div>
