--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a>
-            <span style="color: #df2854; background-color: #EFEBEF; border-radius: 4px;">Oral presentation</span>
+            <span style="color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 0.8rem">Oral presentation</span>
             </p>
         </div>
     </div>
@@ -130,7 +130,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
     </div>
     <div style="display: flex">
             <div style="flex: 20%">
-                <img src="theme-assets/pepal.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
+                <img src="theme-assets/dsr.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
             </div>
             <div style="flex: 80%; align-self: center">
                 <p class="lead">
