--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ My current research interest is in improvement of large-scale language models.
 <!--    More broadly, my research interests are in the areas of <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">robustness, fairness, multimodal learning, and various natural language processing topics</code>.</div>-->
 <!-- <br><br>
     I have conducted a study to learn de-biased representation in natural language processing and computer vision fields. -->
-    Formerly, I worked on projects that aim to learn de-biased representation, consider the personal style on machine-translation, and solve multi-modal QA.
+    Formerly, I worked on projects that aim to learn de-biased representation, consider the personal style on machine-translation, and solve efficient multimodal QA.
     <!-- video-text multimodal learning (i.e.., effective temporal fusion of video and text dataset). -->
     More broadly, my research interests lies in the areas of <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">robustness, fairness, multimodal learning, memory-augmented LM, and various natural language processing topics</code>.</div>
 
@@ -123,7 +123,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             <p class="lead">
             <span class="font-weight-bold">PePAL: Personalized Post-Editing via Cluster-Aware Adversarial Learning</span><br>
             <span class="font-weight-bold">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo<br>
-            <i>(Under Review)</i><br>
+            <i style="font-size: 0.8rem">(Under Review)</i><br>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
             </p>
         </div>
@@ -136,7 +136,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
                 <p class="lead">
                 <span class="font-weight-bold">Dense but Efficient VideoQA for Intricate Compositional Reasoning</span><br>
                 <span class="font-weight-bold">Jihyeon Lee*</span>, Wooyoung Kang*, Eunsol Kim<br>
-                <i>(Under Review)</i><br>
+                <i style="font-size: 0.8rem">(Under Review)</i><br>
                 <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
                 </p>
             </div>
