--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ nav-class: home
     <img src="./theme-assets/profile.png" width="180px"
             alt="profile image">
 </div>
-<div>
-<p>Welcome to my website. 
+<!-- <div>
+<p>Welcome to my website.  -->
     <!-- Here, I mainly share my research interests including CV and projects.  -->
-    Enjoy to read more about me and please feel free to contact further!</p>
+    <!-- Enjoy to read more about me and please feel free to contact further!</p> -->
 <!--<p>Codes are available in <a href="https://github.com/GinaJihyeonLee" target="_blank" rel="noopener noreferrer">Github</a>. If you want to know more about my personality and life style, please visit to my <a href="https://www.instagram.com/ginabeloved/" target="_blank" rel="noopener noreferrer">Instagram</a>.</p>-->
 <!-- and additional technology writings are recorded on <a href="/news/">Tistory</a>. If you want to know more about my personality and life style, please visit to my <a href="https://www.instagram.com/ginabeloved/">Instagram</a>.</p>
 <a href="https://www.notion.so/ginalee/Personal-Page-c18aca076bf64354a7642b5c4a7d9418">Notion</a> page, <a href="/news/">Twitter</a>, and  -->
-</div>
+<!-- </div> -->
 </div>    
 
 <section class="cf">
@@ -62,8 +62,10 @@ My current research interest is in improvement of large-scale language models.
           </ul> -->
     
 <!-- </div> -->
+<div>
 Detailed resume can be found in the following link.
 <a class="read-more" href="/GinaLee_CV_2107_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a>
+</div>
 
 <h2>Latest News</h2>
 <div>
