--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ My current research interest is in improvement of large-scale language models.
 <!--    More broadly, my research interests are in the areas of <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">robustness, fairness, multimodal learning, and various natural language processing topics</code>.</div>-->
 <!-- <br><br>
     I have conducted a study to learn de-biased representation in natural language processing and computer vision fields. -->
-    Formerly, I worked on projects that aim to learn de-biased representation, consider the personal style on machine-translation, and solve efficient multimodal QA.
+    Formerly, I worked on projects that aim to learn de-biased representation, consider the personal style on machine translation, and solve efficient multimodal QA.
     <!-- video-text multimodal learning (i.e.., effective temporal fusion of video and text dataset). -->
     More broadly, my research interests lies in the areas of <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">robustness, fairness, multimodal learning, memory-augmented LM, and various natural language processing topics</code>.</div>
 
@@ -63,8 +63,7 @@ My current research interest is in improvement of large-scale language models.
     
 <!-- </div> -->
 <div>
-Detailed resume can be found in the following link.
-<a class="read-more" href="/GinaLee_CV_2107_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a>
+    <p>Detailed resume can be found in the following link.<a class="read-more" href="/GinaLee_CV_2107_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a></p>
 </div>
 
 <h2>Latest News</h2>
