--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
-            <span class="font-weight-bold">Removing Dataset Bias with Bias-Tailored Swapping Augmentation</span><br>
-            <span class="font-weight-bold">Jihyeon Lee*</span>, Eungyeup Kim*, Jaegul Choo<br>
+            <span style="font-weight: bold">Removing Dataset Bias with Bias-Tailored Swapping Augmentation</span><br>
+            <span style="font-weight: bold">Jihyeon Lee*</span>, Eungyeup Kim*, Jaegul Choo<br>
             <i>ICCV 2021</i><br>
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
             </p>
@@ -106,8 +106,8 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
-            <span class="font-weight-bold">Learning Debiased Representation via Disentangled Feature Augmentation</span><br>
-            Eungyeup Kim*, Jungsoo Lee*, Juyoung Lee, <span class="font-weight-bold">Jihyeon Lee</span>, Jaegul Choo<br>
+            <span style="font-weight: bold"">Learning Debiased Representation via Disentangled Feature Augmentation</span><br>
+            Eungyeup Kim*, Jungsoo Lee*, Juyoung Lee, <span style="font-weight: bold"">Jihyeon Lee</span>, Jaegul Choo<br>
             <i>NeurIPS 2021, Oral presentation</i><br>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
@@ -122,8 +122,8 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
-            <span class="font-weight-bold">PePAL: Personalized Post-Editing via Cluster-Aware Adversarial Learning</span><br>
-            <span class="font-weight-bold">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo<br>
+            <span style="font-weight: bold">PePAL: Personalized Post-Editing via Cluster-Aware Adversarial Learning</span><br>
+            <span style="font-weight: bold">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo<br>
             <i style="font-size: 0.8rem">(Under Review)</i><br>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
             </p>
@@ -135,8 +135,8 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             </div>
             <div style="flex: 80%; align-self: center">
                 <p class="lead">
-                <span class="font-weight-bold">Dense but Efficient VideoQA for Intricate Compositional Reasoning</span><br>
-                <span class="font-weight-bold">Jihyeon Lee*</span>, Wooyoung Kang*, Eunsol Kim<br>
+                <span style="font-weight: bold"">Dense but Efficient VideoQA for Intricate Compositional Reasoning</span><br>
+                <span style="font-weight: bold">Jihyeon Lee*</span>, Wooyoung Kang*, Eunsol Kim<br>
                 <i style="font-size: 0.8rem">(Under Review)</i><br>
                 <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
                 </p>
