--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ My current research interest is in improvement of large-scale language models.
 <h2>Latest News</h2>
 <div>
     <!-- <code style="padding: 2px 4px; font-weight: bold;">Feb 2022</code>&emsp; Officially a Master in Artificial Intelligence<br> -->
-    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; &#128105; Working at Kakaobrain as an AI Research Scientist<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; &#127995; Working at Kakaobrain as an AI Research Scientist<br>
     <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; &#127942; Paper accepted to NeurIPS 2021 as an Oral presentation<br>
     <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; &#127942; Paper accepted to ICCV 2021<br>    
-    <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; &#128105; Starting my internship at Kakaobrin<br>
-    <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; Working at Naver Papago as a Collaborative Researcher<br>
+    <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; &#127995; Starting my internship at Kakaobrin<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; &#127995; Working at Naver Papago as a Collaborative Researcher<br>
     <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; &#127891; Graduated cum laude with a Bachelor in Industrial Engineering & Business Management<br>
-    <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; &#128105; Working at Classum as a Data Analyst/Marketer<br>
+    <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; &#127995; Working at Classum as a Data Analyst/Marketer<br>
 </div>
 
 
