--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             <p class="lead">
             <span style="font-weight: bold">Removing Dataset Bias with Bias-Tailored Swapping Augmentation</span><br>
             Eungyeup Kim*,<span style="font-weight: bold">Jihyeon Lee*</span>, Jaegul Choo<br>
-            <i>ICCV 2021</i><br>
+            <i>International Conference on Computer Vision (ICCV), 2021, Accepted</i><br>
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
             </p>
         </div>
@@ -110,7 +110,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
             <p class="lead">
             <span style="font-weight: bold"">Learning Debiased Representation via Disentangled Feature Augmentation</span><br>
             Eungyeup Kim*, Jungsoo Lee*, Juyoung Lee, <span style="font-weight: bold"">Jihyeon Lee</span>, Jaegul Choo<br>
-            <i>NeurIPS 2021, Oral presentation</i><br>
+            <i>Conference on Neural Information Processing Systems (NeurIPS), 2021, Accepted as Oral Presentation (< 1% acceptance rate)</i><br>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
             <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a>
