--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
-            <span style="font-weight: bold">Removing Dataset Bias with Bias-Tailored Swapping Augmentation</span><br>
+            <span style="font-weight: bold">BiaSwap: Removing Dataset Bias with Bias-Tailored Swapping Augmentation</span><br>
             Eungyeup Kim*,<span style="font-weight: bold">Jihyeon Lee*</span>, Jaegul Choo<br>
             <i>International Conference on Computer Vision (ICCV), 2021, Accepted</i><br>
-            <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
+            <a href="https://arxiv.org/abs/2108.10008" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
             </p>
         </div>
     </div>
@@ -109,11 +109,11 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
         <div style="flex: 80%; align-self: center">
             <p class="lead">
             <span style="font-weight: bold"">Learning Debiased Representation via Disentangled Feature Augmentation</span><br>
-            Eungyeup Kim*, Jungsoo Lee*, Juyoung Lee, <span style="font-weight: bold"">Jihyeon Lee</span>, Jaegul Choo<br>
+            Jungsoo Lee*, Eungyeup Kim*, Juyoung Lee, <span style="font-weight: bold"">Jihyeon Lee</span>, Jaegul Choo<br>
             <i>Conference on Neural Information Processing Systems (NeurIPS), 2021, Accepted as Oral Presentation (< 1% acceptance rate)</i><br>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
-            <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
-            <a href="" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a>
+            <a href="https://arxiv.org/abs/2107.01372" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
+            <a href="https://github.com/kakaoenterprise/Learning-Debiased-Disentangled" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Code]</a>
             <span style="color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 0.8rem">Oral presentation</span>
             </p>
         </div>
@@ -124,7 +124,7 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
-            <span style="font-weight: bold">PePAL: Personalized Post-Editing via Cluster-Aware Adversarial Learning</span><br>
+            <span style="font-weight: bold">Personalized Post-editing via User-generated Post-edits</span><br>
             <span style="font-weight: bold">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo<br>
             <i style="font-size: 0.8rem">(Under Review)</i><br>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
