--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ nav-class: home
 <section class="cf">
 <div class="wrapper">
 <h2>About Me</h2>
-<div>I am an AI Researcher of <a style="text-decoration:underline; color: #000000;" href="https://www.kakaobrain.com/" target="_blank" rel="noopener noreferrer">"Kakaobrain</a>, working in large-scale language model team. I received MS from DAVIAN Lab at <a style="text-decoration:underline; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a style="text-decoration:underline; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
+<div>I am an AI Researcher of <a style="text-decoration:underline; color: #000000;" href="https://www.kakaobrain.com/" target="_blank" rel="noopener noreferrer">Kakaobrain</a>, working in large-scale language model team. I received MS from DAVIAN Lab at <a style="text-decoration:underline; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a style="text-decoration:underline; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
     Before that, I obtained the Bachelor of Science in Biz&Tech Management and Industrial Engineering in 2020, at KAIST.
 <br><br>
 <!-- My research interests lies in the areas of natural language processing and machine learning. -->
@@ -63,7 +63,7 @@ My research aims to improve the large-scale language models. I focus on two main
     
 <!-- </div> -->
 <div>
-    <p>Detailed resume can be found in the following link.<a class="read-more" href="/GinaLee_CV_211229_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a></p>
+    <p>Detailed resume can be found in the following link.<a class="read-more" href="/GinaLee_CV_220615_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a></p>
 </div>
 
 <h2>Latest News</h2>
