--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ My research aims to improve the large-scale language models. I focus on two main
 <h2>Latest News</h2>
 <div>
     <!-- <code style="padding: 2px 4px; font-weight: bold;">Feb 2022</code>&emsp; Officially a Master in Artificial Intelligence<br> -->
+    <code style="padding: 2px 4px; font-weight: bold;">Aug 2022</code>&emsp; &#127942; Paper accepted to WACV 2023<br>    
     <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; &#128640; Working at Kakaobrain as an AI Research Scientist<br>
     <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; &#127942; Paper accepted to NeurIPS 2021 as an Oral presentation<br>
     <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; &#127942; Paper accepted to ICCV 2021<br>    
@@ -120,30 +121,32 @@ Multimodal. Some of the methodologies I have been involved in are designed for l
     </div>
     <div style="display: flex">
         <div style="flex: 20%">
-            <img src="theme-assets/pepal.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
+            <img src="theme-assets/dsr.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
         </div>
         <div style="flex: 80%; align-self: center">
             <p class="lead">
-            <span style="font-weight: bold">Personalized Post-editing via User-generated Post-edits</span><br>
-            <span style="font-weight: bold">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo<br>
-            <i style="font-size: 0.8rem">(Under Review)</i><br>
+            <span style="font-weight: bold"">Dense but Efficient VideoQA for Intricate Compositional Reasoning</span><br>
+            <span style="font-weight: bold">Jihyeon Lee*</span>, Wooyoung Kang*, Eunsol Kim<br>
+            <i>Winter Conference on Applications of Computer Vision (WACV), 2023, Accepted</i><br>
+            <a href="https://arxiv.org/abs/2210.10300" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
             <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
             </p>
         </div>
     </div>
-    <div style="display: flex">
-            <div style="flex: 20%">
-                <img src="theme-assets/dsr.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
-            </div>
-            <div style="flex: 80%; align-self: center">
-                <p class="lead">
-                <span style="font-weight: bold"">Dense but Efficient VideoQA for Intricate Compositional Reasoning</span><br>
-                <span style="font-weight: bold">Jihyeon Lee*</span>, Wooyoung Kang*, Eunsol Kim<br>
-                <i style="font-size: 0.8rem">(Under Review)</i><br>
-                <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
-                </p>
-            </div>
+<div style="display: flex">
+        <div style="flex: 20%">
+            <img src="theme-assets/pepal.png" width="100px" alt="" class="figure-img img-fluid" style="margin:10px;">
         </div>
+        <div style="flex: 80%; align-self: center">
+            <p class="lead">
+            <span style="font-weight: bold">PePe: Personalized Post-editing Model utilizing User-generated Post-edits</span><br>
+            <span style="font-weight: bold">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo<br>
+            <i>Arxiv Preprint</i><br>
+            <a href="https://arxiv.org/abs/2209.10139" target="_blank" rel="noopener noreferrer" style="font-size: 0.8rem">[Paper]</a>
+            <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
+            </p>
+        </div>
+    </div>
         <!-- <a class="read-more" href="/project/" title="Case studies">Project details →</a> -->
 </div>
 </section>
